fix: Hides theme controls on small screens to avoid navbar button overlap.

--- a/src/app/modules/layout/navbar/navbar.component.scss
+++ b/src/app/modules/layout/navbar/navbar.component.scss
@@ -37,3 +37,9 @@ small {
 .darknav {
   background-color: #021634;
 }
+
+@media only screen and (max-height: 430px) {
+  .theme-hide {
+      display: none;
+  }
+}
